# aclanthology_citation_scraper

./: .gitignore  Makefile  README.md  pyproject.toml
output/: acl_2010_papers.csv  acl_2011_papers.csv  acl_2012_papers.csv  acl_2013_papers.csv  acl_2014_papers.csv  acl_2015_papers.csv  acl_2016_papers.csv  acl_2017_papers.csv  acl_2018_papers.csv  acl_2019_papers.csv  acl_2020_papers.csv  acl_2022_papers.csv  acl_2023_papers.csv  emnlp_2010_papers.csv  emnlp_2011_papers.csv  emnlp_2012_papers.csv  emnlp_2013_papers.csv  emnlp_2014_papers.csv  emnlp_2015_papers.csv  emnlp_2016_papers.csv  emnlp_2017_papers.csv  emnlp_2018_papers.csv  emnlp_2019_papers.csv  emnlp_2020_papers.csv  emnlp_2021_papers.csv  naacl_2010_papers.csv  naacl_2011_papers.csv  naacl_2012_papers.csv  naacl_2013_papers.csv  naacl_2015_papers.csv  naacl_2016_papers.csv  naacl_2018_papers.csv  naacl_2019_papers.csv  naacl_2021_papers.csv
src/: abc.py  main.py
src/paper_scraper/: __init__.py
