[project]
name = "paper-scraper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takuma1229", email = "takuma1229@gmail.com" }
]
dependencies = [
    "scholarly>=1.7.11",
    "pandas>=2.2.2",
    "bs4>=0.0.2",
    "fake-useragent>=1.5.1",
    "fp>=0.2",
    "argparse>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/paper_scraper"]
